<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BloodPressureActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Blood Pressure Test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="goBack"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.978" />

    <Button
        android:id="@+id/resultBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="goResults"
        android:text="Calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.978" />

    <LinearLayout
        android:id="@+id/hLayout"
        android:layout_width="368dp"
        android:layout_height="300sp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:id="@+id/hLayout1"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/age"
                tools:layout_editor_absoluteX="46dp"
                tools:layout_editor_absoluteY="140dp" />

            <TextView
                android:id="@+id/tvSex"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/sex"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="196dp" />

            <TextView
                android:id="@+id/tvSystolic"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/systolic"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="261dp" />

            <TextView
                android:id="@+id/tvDiastolic"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/diastolic"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="347dp" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text="@string/phone"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="347dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/iptAge"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:ems="10"
                android:inputType="number"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="140dp" />

            <RadioGroup
                android:id="@+id/rbGroup"
                android:layout_width="match_parent"
                android:layout_height="50sp">

                <RadioButton
                    android:id="@+id/rbM"
                    android:layout_width="wrap_content"
                    android:layout_height="25sp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/m" />

                <RadioButton
                    android:id="@+id/rbF"
                    android:layout_width="wrap_content"
                    android:layout_height="25sp"
                    android:layout_weight="1"
                    android:text="@string/f" />
            </RadioGroup>

            <EditText
                android:id="@+id/iptSystolic"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:ems="10"
                android:inputType="number"
                tools:layout_editor_absoluteX="149dp"
                tools:layout_editor_absoluteY="246dp" />

            <EditText
                android:id="@+id/iptDiastolic"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:ems="10"
                android:inputType="number"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="333dp" />

            <EditText
                android:id="@+id/iptPhone"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:ems="10"
                android:inputType="number"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="333dp" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>